<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    >

    <TextView
        android:id="@+id/legalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="60dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/Anthracite_grey"/>

    <EditText
        android:id="@+id/legalNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/legalName"
        android:layout_alignBottom="@+id/legalName"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="25"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/mobileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/legalName"
        android:layout_below="@+id/legalNameEditText"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/mobile"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/Anthracite_grey"/>

    <EditText
        android:id="@+id/mobileEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mobileTextView"
        android:layout_alignBottom="@+id/mobileTextView"
        android:layout_alignStart="@+id/legalNameEditText"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="10"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mobileTextView"
        android:layout_below="@+id/mobileEditText"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/Anthracite_grey"/>

    <Spinner
        android:id="@+id/genderSpinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mobileEditText"
        android:layout_alignTop="@+id/genderTextView"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="-6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/areaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/genderTextView"
        android:layout_below="@+id/genderSpinner"
        android:layout_marginTop="10dp"
        android:text="@string/area"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/Anthracite_grey"/>

    <EditText
        android:id="@+id/areaEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/areaTextView"
        android:layout_alignBottom="@+id/areaTextView"
        android:layout_alignStart="@+id/genderSpinner"
        android:ems="10"
        android:inputType="textCapWords"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/languageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/areaTextView"
        android:layout_below="@+id/areaEditText"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/language"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/Anthracite_grey"/>

    <EditText
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/languageLabel"
        android:layout_alignBottom="@+id/languageLabel"
        android:layout_alignStart="@+id/areaEditText"
        android:ems="10"
        android:hint="@string/enter_preferred_language"
        android:inputType="textCapWords"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/commentsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/languageLabel"
        android:layout_below="@+id/language"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/comments"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/Anthracite_grey"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/feedbackEditTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commentsLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner_edittextbox"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLength="1000"
        android:overScrollMode="always"
        android:padding="8dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textCursorDrawable="@null"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/feedbackEditTextBox"
        android:layout_centerHorizontal="true">
    </View>

    <ProgressBar
        android:id="@+id/progressBarInDialog"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:theme="@style/CircularProgress"
        android:visibility="invisible"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/Life_Brown">

        <TextView
            style="@style/dialogueTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/capture_contact"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/captureContact"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/appbar_padding_top"
            android:src="@drawable/done"/>


    </RelativeLayout>

</RelativeLayout>